# nim-opensansad

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
data/: mp_aliases.json
eval/: test_set.json
src/nim_opensansad/: cli.py  config.py  eval.py  ingest.py  ingest_v2.py  metadata.py  query.py  stats.py
tests/: bench_extraction.py  test_query.py
